[gd_scene load_steps=7 format=3 uid="uid://briev35c1jk82"]

[ext_resource type="Script" path="res://Quests/quest_npc.gd" id="1_mcp5a"]
[ext_resource type="Texture2D" uid="uid://bbueqsiywacua" path="res://Quests/QuestNPC/questcharacter.png" id="2_2g473"]
[ext_resource type="Texture2D" uid="uid://bwklc3batpott" path="res://Inventory/inventoryBackground.png" id="3_nosdr"]
[ext_resource type="FontFile" uid="uid://dwvnucq3ajek6" path="res://fonts/a.ttf" id="3_yugn8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1x43"]
size = Vector2(20, 22.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xacx7"]
size = Vector2(22, 22)

[node name="QuestNPC" type="CharacterBody2D"]
script = ExtResource("1_mcp5a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2g473")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_g1x43")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_xacx7")

[node name="TalkToNPC" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(30, 13)
layout_mode = 3
anchors_preset = 0
offset_left = -15.0
offset_top = -28.0
offset_right = 15.0
offset_bottom = -15.0

[node name="TalkToNPCBackground" type="NinePatchRect" parent="TalkToNPC"]
custom_minimum_size = Vector2(30, 13)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_nosdr")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="TalkToNPCButton" type="Button" parent="TalkToNPC/TalkToNPCBackground"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 13)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 2
text = "
"

[node name="Label" type="Label" parent="TalkToNPC/TalkToNPCBackground"]
custom_minimum_size = Vector2(22, 7)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -2.5
offset_right = 11.0
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_yugn8")
theme_override_font_sizes/font_size = 4
text = "Talk to NPC"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="TalkToNPC/TalkToNPCBackground/TalkToNPCButton" to="." method="_on_talk_to_npc_button_pressed"]
